Question 6 et 7 : routes "GET /consoles/{id}/games" et "GET /games/{id}/reviews"
